[tool.poetry]
name = "planescrape"
version = "0.1.0"
description = "Plane price scraping utility"
authors = ["Tobias and Wolf"]
license = "MIT"
readme = "README.md"
packages = [ { include = "planescrape", from = "src" } ]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
tqdm = "^4.66.4"
selenium = "^4.22.0"
bs4 = "^0.0.2"
pandas = "^2.2.2"


[tool.poetry.scripts]
main = "planescrape.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
